feat(account): allow users to change username
